--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My restaurant</title>
 </head>
 <body>
+    <header>
+        <nav><button></button>
+            <button></button>
+            <button></button>
+        </nav>
+    </header>
+    <div id="content">
+        <h1>Mandarini SKG</h1>
+        <img src="./images/mandarini_intro.jpg">
+    </div>
     
 </body>
 </html>
