made some html and css

--- a/src/template.html
+++ b/src/template.html
@@ -7,15 +7,24 @@
 </head>
 <body>
     <header>
-        <nav><button></button>
-            <button></button>
-            <button></button>
+        <img class="logo" src="./images/rafikiLogo.jpeg">
+        <nav>
+            <button class="header-btn">Home</button>
+            <button class="header-btn">Menu</button>
+            <button class="header-btn">About</button>
         </nav>
     </header>
-    <div id="content">
-        <h1>Mandarini SKG</h1>
-        <img src="./images/mandarini_intro.jpg">
-    </div>
+    <section class="hero">
+        <div class="hero-container">
+            <div class="content-container">
+                <h1>Discover Our Garden In The Heart Of SKG</h1>
+                <h3>Relaxing vibes, delicius brunch
+                    and a coffe to remember..</h3>
+                <button class="menu-hero-button">Check Our Menu</button>
+            </div>
+            <img id="garden" src="./images/garden.jpg">
+        </div>
+    </section>
     
 </body>
 </html>
